--- a/Blog_CSS/index.html
+++ b/Blog_CSS/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <nav>
+    <nav class="header">
         <div class="logo-container">
             <img src="assets/img/SimpleCode.png" />
         </div>
